[package]
name = "realfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
case_insensitive_hashmap = "0.9.0"
percent-encoding = "2.3.1"
# may_minihttp = "0.1.9"
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp", rev = "e35c93cce95fbbb143c5ec3cb26ca1e0cc9308a7"}
bytes = "1.7.1"
may = "0.3.46"
